Continuação da documentação, criação da migration e da entidade de users
