# src/modules/accounts/entities/User.ts
@@ -1,19 +1,31 @@
 import { Column, CreateDateColumn, Entity, PrimaryColumn } from "typeorm";
 import { v4 as uuidV4 } from "uuid";
 
-@Entity("specifications")
-class Specification {
+@Entity("users")
+class User {
   @PrimaryColumn()
-  id?: string;
+  id: string;
 
   @Column()
   name: string;
 
   @Column()
-  description: string;
+  username: string;
+
+  @Column()
+  email: string;
+
+  @Column()
+  password: string;
+
+  @Column()
+  driver_license: string;
+
+  @Column()
+  isAdmin: boolean;
 
   @CreateDateColumn()
-  created_at: Date;
+  created_at: string;
 
   constructor() {
     if (!this.id) {
@@ -22,4 +34,4 @@ class Specification {
   }
 }
 
-export { Specification };
+export { User };
